storing users to db, storing routes. NEED TO BE TESTED

--- a/my-project/my-project-web/src/main/webapp/static/styles/style.css
+++ b/my-project/my-project-web/src/main/webapp/static/styles/style.css
@@ -29,7 +29,7 @@ table#payment-history { width: 100%; border-collapse: collapse; padding: 2px; }
 table#payment-history th { text-align: center; border: 1px solid #c0c0c0; font: bold 14px tahoma; }
 table#payment-history td { text-align: left; border: 1px solid #c0c0c0; font: normal 14px tahoma; }
 
-#layer1 {
+#pay {
 	position: absolute;
 	visibility: hidden;
 	width: 400px;
