--- a/my-project/my-project-web/src/main/webapp/static/styles/style.css
+++ b/my-project/my-project-web/src/main/webapp/static/styles/style.css
@@ -25,11 +25,12 @@ div#head  a { padding: 0 10px 0 0; }
 
 div#footer { width: 100%; height: 60px; color: #808080; border-top: 1px solid #c0c0c0; font: normal 14px tahoma; padding-top: 10px; margin-top: 10px; }
 
-table#payment-history { width: auto; border-collapse: collapse; padding: 2px; }
+table#payment-history { width: 100%; border-collapse: collapse; padding: 2px; }
 table#payment-history th { text-align: center; border: 1px solid #c0c0c0; font: bold 14px tahoma; }
 table#payment-history td { text-align: left; border: 1px solid #c0c0c0; font: normal 14px tahoma; }
 
 #pay {
+        overflow: scroll;
 	position: absolute;
 	visibility: hidden;
 	width: 400px;
